# ime-windows

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  MODEL-LICENSE.txt  PACKAGING.md  README.md
.github/workflows/: build-msi.yml
cmake/: CollectVcpkgLicenses.cmake  DownloadModel.cmake  EnsureWix.cmake
cmake/wix/: Autostart.wxs  RegisterIme.wxs  UninstallShortcut.wxs  WIX.zh-TW.template.in
